# DocuSchema

./: .env  .env.example  .gitignore  CONTRIBUTION.md  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/common_utils/: llm_selector.py  loggers.py
app/config/: config.py  db_config.py
app/database/: base_db.py  db_factory.py  mysql.py  postgres.py
app/src/: generate_data_dictionary.py  generate_dd.py  metadata_extractor.py
common_utils/: llm_selector.py  loggers.py
config/: db_config.py
src/: fetch_metadata.py
